[project]
name = "realsense-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foxglove-sdk>=0.17.2",
    "mcap>=1.3.1",
    "numpy>=2.4.2",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pyrealsense2>=2.56.5.9235",
]
